objects/amc__Filter__c.object
<CustomObject>
    <description>Used by the Whiteboard, Scheduler, Story Board and Timesheet to Store Complex Filter Data.</description>
    <fields>
        <fullName>amc__Data__c</fullName>
        <inlineHelpText>JSON Filter Criteria</inlineHelpText>
        <label>Data</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Type__c</fullName>
        <inlineHelpText>What page the Filter is for.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduler</fullName>
                </value>
                <value>
                    <fullName>Whiteboard</fullName>
                </value>
                <value>
                    <fullName>ProgramPlanner</fullName>
                    <label>Program Planner</label>
                </value>
                <value>
                    <fullName>ActionPad</fullName>
                    <label>Action Pad</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which User the Filter is for.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>